--- a/index.html
+++ b/index.html
@@ -296,12 +296,10 @@
                     <div class="container">
                         <img class="testimonio-imagen rounded-circle" src="imagenes/cliente1.svg"
                             alt="Foto de carlos">
-                        <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel
-                            iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a
-                            placerat.</p>
-                        <div class="testimonio-info">
-                            <p class="cliente">carlos</p>
-                            <p class="cargo">Director del aria de TI</p>
+                        <p class="testimonio-texto">Me gusto el trato que me dio ya que es una persona responsable en su ambito laboral ya que es una persona profesional hacia su persona y sus trabajo </p> 
+                       <div class="testimonio-info">
+                            <p class="cliente">nadia</p>
+                            <p class="cargo">cliente</p>
                         </div>
                     </div>
                 </div>
@@ -309,11 +307,9 @@
                     <div class="container">
                         <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg"
                             alt="Foto de Nora">
-                        <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel
-                            iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a
-                            placerat.</p>
+                        <p class="testimonio-texto">Se me hizo interesante el curso ya que aprendieron demasiado y lo pueden poner en practica en su area laboral, asi mismo es una chica responsable que pone mucha atencion y se empeña demasiado en todo.</p>
                         <div class="testimonio-info">
-                            <p class="cliente">laura</p>
+                            <p class="cliente">areli</p>
                             <p class="cargo">Directora de desarrolladora</p>
                         </div>
                     </div>
@@ -322,9 +318,7 @@
                     <div class="container">
                         <img class="testimonio-imagen rounded-circle" src="imagenes/cliente3.svg"
                             alt="Foto de Leonardo">
-                        <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel
-                            iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a
-                            placerat.</p>
+                        <p class="testimonio-texto">me agrado el conocimiento en el curso de tecnolochicas en la forma de como se fue relactando en como fueron sus diseños .</p>
                         <div class="testimonio-info">
                             <p class="cliente">alex</p>
                             <p class="cargo">Director de aria de seguridad</p>
