--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <p class="testimonio-texto">Me gusto el trato que me dio ya que es una persona responsable en su ambito laboral ya que es una persona profesional hacia su persona y sus trabajo </p> 
                        <div class="testimonio-info">
                             <p class="cliente">nadia</p>
-                            <p class="cargo">cliente</p>
+                            <p class="cargo">compañera de tecnolochicasPro</p>
                         </div>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
                         <p class="testimonio-texto">Se me hizo interesante el curso ya que aprendieron demasiado y lo pueden poner en practica en su area laboral, asi mismo es una chica responsable que pone mucha atencion y se empeña demasiado en todo.</p>
                         <div class="testimonio-info">
                             <p class="cliente">areli</p>
-                            <p class="cargo">Directora de desarrolladora</p>
+                            <p class="cargo">embajadora de tecnolochicasPro</p>
                         </div>
                     </div>
                 </div>
@@ -320,8 +320,8 @@
                             alt="Foto de Leonardo">
                         <p class="testimonio-texto">me agrado el conocimiento en el curso de tecnolochicas en la forma de como se fue relactando en como fueron sus diseños .</p>
                         <div class="testimonio-info">
-                            <p class="cliente">alex</p>
-                            <p class="cargo">Director de aria de seguridad</p>
+                            <p class="cliente">lupita</p>
+                            <p class="cargo">alumna de tecnolochicasPro</p>
                         </div>
                     </div>
                 </div>
